--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "web-r2wc",
-  "version": "0.1.0",
-  "private": true,
+  "name": "nidhis-web-r2wc",
+  "version": "0.1.5",
+  "main": "./src/index.tsx",
   "dependencies": {
+    "@r2wc/react-to-web-component": "^2.0.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -12,6 +13,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "build-ts": "tsc",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -34,5 +36,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "typescript": "^5.3.2"
   }
 }
