--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "build-ts": "tsc",
+    "build-ts": "npm run copy:assets && tsc --watch",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "copy:assets": "cp -r src/assets/ dist/assets"
   },
   "eslintConfig": {
     "extends": [
@@ -36,8 +37,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "typescript": "^5.3.2"
   }
 }
